add comprehensive e2e tests and production enhancements
- add critical flow e2e tests: transaction-cycle, timebank-balance
- complete registration test in auth.spec.ts
- add shared e2e test helpers (login, logout, switchUser)
- split test_comments_ranking.py into focused modules
- extend setup_demo.py with forum content and comments
- add CSRF_TRUSTED_ORIGINS for production
- add logs directory to Dockerfile.prod
- add service health checks to make test-e2e
- update playwright config for docker environment

--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -36,8 +36,9 @@ ENV PATH=/root/.local/bin:$PATH
 # Copy application code
 COPY . .
 
-# Create non-root user for security
-RUN useradd -m -u 1000 appuser && \
+# Create logs directory and non-root user for security
+RUN mkdir -p /app/logs && \
+    useradd -m -u 1000 appuser && \
     chown -R appuser:appuser /app
 
 # Switch to non-root user
